projects/state-space-model/scripts/log/mamba_370m_big_kernel_64_test.log
  File "/nvme/zecheng/modelzipper/projects/state-space-model/src/test.py", line 119
    , "trec", "triviaqa", "samsum", "passage_count", "passage_retrieval_en",,]]
    ^
SyntaxError: invalid syntax
